website are responsive and find bugs now section updated and all alignment done

--- a/css/nav.css
+++ b/css/nav.css
@@ -23,7 +23,7 @@ nav {
     align-items: center;
     width: 1428px;
     background-color: #161A21;
-    height: 8.vh;
+    height: 60px;
     margin: 30px 0px 0px 0px;
     border-radius: 100px;
 }
@@ -33,7 +33,7 @@ nav {
     display: flex;
     max-width: 1428px;
     justify-content: space-between;
-    height: 8.7vh;
+    height: 60px;
     align-items: center; 
     color: white;
 
@@ -48,7 +48,7 @@ nav {
     justify-content: space-between;
     align-items: center; 
     display: flex;
-    gap: 3.3vw;
+    gap: 50px;
     padding-left: 3vw;
     font: bold;
     letter-spacing: 1.1px;
@@ -57,7 +57,7 @@ nav {
     justify-content: space-between;
     align-items: center; 
     display: flex;
-    gap: 3.3vw;
+    gap: 50px;
     padding-right: 3vw;
     font: bold;
     letter-spacing: 1.1px;
